Fixed btn box align

--- a/src/containers/app/scss/components/modal-window.scss
+++ b/src/containers/app/scss/components/modal-window.scss
@@ -106,11 +106,6 @@
             height: auto;
           }
         }
-        @media(max-width: 768px) {
-          .btn-box {
-            height: 38px;          
-          }
-        }
       }
     }
 }
